# newstrack

./: .gitignore  main.py  pyproject.toml
newstrack/: __init__.py  api.py  api_pytrends.py  data_retrieval.py  plot.py  utils.py
